# fastapi-tensorflow-jaeger

./: .dockerignore  .env  .flake8  .gcloudignore  .gitignore  Makefile  alembic.ini  app.yaml  entrypoint.sh  linux.requirements.txt  main.py  pyproject.toml  requirements.txt  testing_image.sh  windows.requirements.txt
.github/workflows/: build_artifact.yaml  development.yaml  production.yaml
deployment/: development.dockerfile  nginx.conf  requirements.txt
locust/: configuration.py
ml_models/: capstone_model.h5  label_encoder.pickle  tokenizer.pickle
postman/: NLP_Service.postman_collection.json  NLP_Service.postman_environment.json
src/alembic/: env.py
src/alembic/versions/: 01f2765ad4c6_migrate_postgres.py  0a24327f2e57_migrate.py  0afd5ba5dcfe_migrate.py  0ccee8153bed_migrate.py  1f1c1445ebf8_migrate.py  204cce441f47_migrate.py  2150a1fde263_migrate.py  286ae0d01953_migrate.py  359a5e105f4b_migrate.py  75a225bc291a_migrate.py  7c5da9ade4eb_migrate.py  7ca039761350_migrate_postgres.py  95abf8ca240e_migrate.py  c28839b4cec6_migrate.py  c615cb1cbb7d_migrate_postgres.py  cb05e6ed247f_migrate.py  d988fbb037ca_migrate.py  da7ce2db6fa5_migrate.py  e14619195f71_migrate_postgres.py  e18369dacb0d_migrate.py  f06eface0079_migrate.py
src/controllers/: prediction_controller.py
src/models/: model.py
src/routes/: main_routes.py  ml_routes.py  predict_routes.py  user_routes.py
src/schemas/: user_request_schema.py
src/services/: prediction_service.py
src/utilities/: image_recog_utils.py  ml_utils.py  nlp_utils.py
tests/: test_ml_services.py  test_utilities.py
(+23 files in other folders)
