[tool.poetry]
name = "fastapi-tensorflow-jaeger"
version = "1.0.0"
description = "Machine Learning Service"
authors = ["belajarqywok <belajarqywok@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
alembic = "1.11.3"
fastapi = "0.101.1"
psycopg2 = "2.9.7"
pydantic = "2.2.1"
PyJWT = "2.8.0"
python-dotenv = "1.0.0"
python-jose = "3.3.0"
scikit-learn = "1.3.0"
tensorflow = "2.12.0"
uvicorn= "0.23.2"
pillow = "10.1.0"
keras_preprocessing = "1.1.2"

[tool.poetry.dev-dependencies]
nose2 = "0.13.0"
flake8 = "6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
